# Ragcloud

./: .gitignore  .replit  README.md  app.py  document_loader.py  knowledge_bases.json  logger.py  pyproject.toml  rag_engine.py  replit.md
.streamlit/: config.toml
attached_assets/: Pasted--1-AI-Cloud-ru--1765776696542_1765776696542.txt
knowledge_base/__MACOSX/: ._cloudru
knowledge_base/cloudru/ai-factory/: container-apps_nocode-telegram-bot.md  container-apps_telegram-bot-connection.md  container-apps_vibecode-django-photo-app-mcp-server.md  foundation-models_assistent-aider.md  foundation-models_connect-chatbox.md  foundation-models_connect-librechat.md  foundation-models_connect-litellm.md  foundation-models_connect-vscode.md  foundation-models_langchain-tg-bot.md  foundation-models_open-webui.md  managed-rag_connect-mcp-chatbox.md  managed-rag_create-agent.md  managed-rag_create-inference.md  managed-rag_json-files.md  managed-rag_md-files.md  ml-finetuning_finetune-example.md  ml-finetuning_prepare-dataset.md  notebooks_comfyui-kandinsky.md  notebooks_cv-cnn.md  notebooks_cv-pretrain.md  notebooks_images-comfyui.md  notebooks_low-code-rag.md  notebooks_training-tensorboard.md
knowledge_base/cloudru/brokers/: managed-kafka_background-tasks.md  managed-kafka_kafka-ui.md  managed-spark_spark-streaming.md
knowledge_base/cloudru/compute/: arenadata-db_vm-local-ip.md  bare-metal_1c_deploy.md  bare-metal_highload_app.md  bare-metal_k3s.md  bare-metal_llm_deploy.md  bare-metal_onlyoffice.md  (+27 more)
vector_store/: index.pkl
vector_store_cloudru/: index.pkl
(+59 files in other folders)
