[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "openai>=2.11.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "tiktoken>=0.12.0",
]
